tests/baselines/reference/moduleKeywordRepeatError.errors.txt
moduleKeywordRepeatError.ts(3,1): error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
moduleKeywordRepeatError.ts(3,15): error TS1005: ';' expected.


==== moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
    ~~~~~~
!!! error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
                  ~
!!! error TS1005: ';' expected.